--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@ Select ONE Additional Feature to Add
 [ no ] Feature 4 - Use Square Bullets
 [ no ] Feature 5 - Include a list within a list
 -->
-    
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Unit 1 Project</title>
-    </head>
-    <body>
 
-        
-    </body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Unit 1 Project</title>
+  </head>
+  <h1> . ݁₊ ⊹ . ݁˖ Get into KPOP (BG Edition). ݁₊ ⊹ . ݁˖   </h1>
+  <p> 
+
+  
+  
+  
+  </body>
 </html>
