🔵🩺 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -278,6 +278,19 @@ Select ONE Additional Feature to Add
          style="float:left;">
   3. <em>ALLURE OF THE SEAS</em>
   <br> 
+   <img
+         src="https://eu-images.contentstack.com/v3/assets/blt57a7a4fed12d2120/blt1e3f742173dd02e2/66cdaefbace8d0a5c6622894/CRUISE-Allure-new-pool-deck.jpg?width=1280&auto=webp&quality=95&format=jpg&disable=upscale"
+         alt="Royal Caribbean Side view on the Allure of the Seas"
+         width="318"
+       height="320"
+         style="float:left; margain-right:10px">
+    <img/>
+    <img
+         src="https://s3.amazonaws.com/a-us.storyblok.com/f/1005231/25403142a3/image_2014.jpg"
+         alt="Royal Caribben Side Veiw Oasis of the Seas"
+         width="320" 
+         height="320"
+         style="float:left;">
   </ol></ls>
   </body>
 </html>
